# fastbillingfile

./: .dockerignore  .env.example  .gitignore  DOCKER.md  Dockerfile  JOTFORM_FIELD_MAP.md  README.md  WHENIWORK_FIELD_MAP.md  docker-compose.yml  pyproject.toml
.claude/: settings.json
billingfiles/: BILLED_CLAIM_APR26A_7717591.TXT  BILLED_CLAIM_MAR25B_7717591.TXT  BILLED_CLAIM_MAR25C_7717591.TXT  BILLED_CLAIM_MAR25D_7717591.TXT  BILLED_CLAIM_MAR26C_7717591.TXT  BILLED_CLAIM_MAR26D_7717591.TXT  HPC.txt
billingfiles/Billing Claim Files for JotfRRRRRorm Shift Note Audit (Feb 2025)/: BILLED_CLAIM_FEB25B_7717591.TXT  BILLED_CLAIM_FEB25C_7717591.TXT  BILLED_CLAIM_FEB25D_7717591.TXT  BILLED_CLAIM_MAR25A_7717591.TXT
billingfiles/Billing Claim Files for Jotform ShifRRRt Note Audit (Jan 2025)/: BILLED_CLAIM_FEB25A_7717591.TXT  BILLED_CLAIM_JAN25C_7717591.TXT  BILLED_CLAIM_JAN25D_7717591.TXT  BILLED_CLAIM_JAN25E_7717591.TXT
billingfiles/Billing Claim Files for Jotform Shift Note Audit (Apr 2025 Updated)/: BILLED_CLAIM_APR25E_7717591.TXT
billingfiles/Billing Claim Files for Jotform Shift Note Audit (FFFApr 2025)-- Notice/: BILLED_CLAIM_APR25A_7717591.TXT  BILLED_CLAIM_APR25B_7717591.TXT  BILLED_CLAIM_APR25C_7717591.TXT  BILLED_CLAIM_APR25D_7717591.TXT
frontend/: app.js  index.html  styles.css
frontend/ui-prototypes/: STITCH_EXPORT_MANIFEST.md
src/audit_engine/: __init__.py  api.py  cli.py  config.py  (+7 more)
tests/: test_billing_parser.py  test_engine_golden.py  test_jotform_connector.py  test_normalize.py  test_reporting.py  test_rules.py  test_when_i_work_connector.py
(+5 files in other folders)
